--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ author = Krisque
 description = A self-hosted zip-code API.
 long_description = file: README.md
 long_description_content_type = text/markdown
+license_file = LICENSE
 
 [options]
 entry_points = file:entry_points.cfg
@@ -14,6 +15,7 @@ install_requires =
   fastapi
   uvicorn[standard]
   strawberry-graphql
+  jinja2
 
 setup_requires = setuptools_scm
 python_requires = >=3.10
