--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: docker/api/Dockerfile.dev
     ports:
       - "8000:8000"
   db:
     build:
-      context: docker/database
+      context: docker/database/
       dockerfile: Dockerfile.dev
     ports:
       - "3306:3306"
