--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ mypy = "^1.0.0"
 black = "^23.1.0"
 flake8 = "^6.0.0"
 jedi = "^0.18.2"
+pre-commit = "^3.3.2"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.4.2"
