--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
-DATABASE_USER: admin
-DATABASE_PASSWORD: pass
-DATABASE_HOST: 127.0.0.1
-DATABASE_PORT: 8000
-DATABASE_NAME: test
+DATABASE_USER = "teste"
+DATABASE_PASSWORD = "teste"
+DATABASE_HOST = "jacobson_db_1"
+DATABASE_PORT = 3306
+DATABASE_NAME = "test"
 
-CEP_ABERTO_TOKEN: token
+CEP_ABERTO_TOKEN = 'token'
