--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,26 @@
-version: '1.0'
-
 services:
   app:
     build:
       context: .
-      dockerfile: docker/api/Dockerfile.dev
+      dockerfile: ./docker/app/Dockerfile.dev
     ports:
       - "8000:8000"
+    depends_on:
+      - db
+    volumes:
+      - ".:/jacobson"
+    restart: always
   db:
     build:
-      context: docker/database/
+      context: ./docker/database/
       dockerfile: Dockerfile.dev
+    environment:
+        MARIADB_RANDOM_ROOT_PASSWORD: "yes"
+        MARIADB_USER: ${DATABASE_USER}
+        MARIADB_PASSWORD: ${DATABASE_PASSWORD}
+        MARIADB_DATABASE: ${DATABASE_NAME}
     ports:
       - "3306:3306"
+    volumes:
+      - ./docker/database/data:/var/lib/mysql
+    restart: always
