--- a/docker/app/Dockerfile.dev
+++ b/docker/app/Dockerfile.dev
@@ -1,18 +1,19 @@
 FROM docker.io/library/python:3-alpine
 
-LABEL app="adress"
-
 WORKDIR /jacobson
 
-ADD jacobson .
+VOLUME .:/jacobson
+
+EXPOSE 8000
+
 ADD requirements.txt .
 
 RUN apk update \
-		&& apk upgrade \
+    && apk upgrade \
     && apk add --no-cache gcc musl-dev mariadb-connector-c-dev \
     && pip install --upgrade pip \
     && pip install -r requirements.txt \
-    && apk remove gcc muls-dev \
+    && apk del gcc musl-dev \
     && pip cache purge
 
- CMD ["uvicorn", "jacobson.api.app:app", "--host=0.0.0.0","--port=8000","--reload"]
+CMD ["uvicorn", "api.app:app", "--host=0.0.0.0", "--port=8000", "--reload"]
