--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,38 @@
+[tool.mypy]
+python_version = "3.12"
+strict = true
+exclude = ["jacobson", "build"]
+plugins = ["pydantic.mypy", "strawberry.ext.mypy_plugin"]
+
+[tool.ruff]
+lint.select = [
+    "E",   # pydocstyle
+    "W",   # pydocstyle
+    "F",   # pyflakes
+    "I",   # isort
+    "UP",  # pyupgrade
+    "D",   # docstrings
+    "RUF", # ruff
+]
+lint.ignore = [
+    "D100", # Missing docstring in public module
+    "D101", # Missing docstring in public class
+    "D102", # Missing docstring in public method
+    "D103", # Missing docstring in public function
+    "D104", # Missing docstring in public package
+    "D107", # Missing docstring in `__init__`
+    "D105", # Missing docstring in magic method
+    "D203", # 1 blank line required before class docstring
+    "D205", # 1 blank line required between summary line and description
+    "D211", # no-blank-line-before-class
+    "D212", # Multi-line docstring summary should start at the first line
+]
+line-length = 79
+target-version = "py312"
+
+[tool.ruff.format]
+quote-style = "single"
+
 [tool.poetry]
 name = "jacobson"
 version = "0.1.0"
@@ -7,26 +42,32 @@ license = "AGPLv3"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-sqlmodel = "^0.0.8"
-fastapi = "^0.90.0"
-uvicorn = {extras = ["standard"], version = "^0.20.0"}
-mariadb = "^1.1.5.post3"
-strawberry-graphql = "^0.155.4"
+python = "^3.12"
+uvicorn = {extras = ["standard"], version = "^0.29.0"}
+fastapi = "^0.110.1"
+strawberry-graphql = "^0.224.1"
+httpx = "^0.27.0"
+pydantic = "^2.6.4"
+sqlmodel = "^0.0.16"
+alembic = "^1.13.1"
+asyncmy = "^0.2.9"
+pydantic-settings = "^2.2.1"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.0.0"
-black = "^23.1.0"
-flake8 = "^6.0.0"
-jedi = "^0.18.2"
-pre-commit = "^3.3.2"
+pre-commit = "^3.7.0"
+ruff = "^0.3.5"
+mypy = "^1.9.0"
+poetry-plugin-export = "^1.7.1"
+commitizen = "^3.21.3"
 
 [tool.poetry.group.docs.dependencies]
-mkdocs = "^1.4.2"
-mkdocs-material = "^9.0.11"
+mkdocs = "^1.5.3"
+mkdocs-material = "^9.5.17"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^7.2.1"
+pytest = "^8.1.1"
+pytest-cov = "^5.0.0"
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core"]
