--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,9 +45,9 @@ readme = "README.md"
 python = "^3.12"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
 fastapi = "^0.110.1"
-strawberry-graphql = "^0.224.1"
+strawberry-graphql = "^0.225.1"
 httpx = "^0.27.0"
-pydantic = "^2.6.4"
+pydantic = "^2.7.0"
 sqlmodel = "^0.0.16"
 alembic = "^1.13.1"
 asyncmy = "^0.2.9"
@@ -55,14 +55,15 @@ pydantic-settings = "^2.2.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
-ruff = "^0.3.5"
+ruff = "^0.3.7"
 mypy = "^1.9.0"
 poetry-plugin-export = "^1.7.1"
-commitizen = "^3.21.3"
+commitizen = "^3.22.0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.5.3"
-mkdocs-material = "^9.5.17"
+mkdocs-material = "^9.5.18"
+mkdocstrings = "^0.24.3"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.1.1"
