--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.mypy]
 python_version = "3.12"
 strict = true
-exclude = ["jacobson", "build"]
+exclude = ["build", "docker", "tests"]
 plugins = ["pydantic.mypy", "strawberry.ext.mypy_plugin"]
 
 [tool.ruff]
@@ -33,6 +33,11 @@ target-version = "py312"
 [tool.ruff.format]
 quote-style = "single"
 
+[tool.pytest.ini_options]
+minversion = "8.2"
+addopts = "-vv --no-header"
+testpaths = ["tests"]
+
 [tool.poetry]
 name = "jacobson"
 version = "0.1.0"
@@ -44,31 +49,34 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
-fastapi = "^0.110.1"
-strawberry-graphql = "^0.225.1"
+fastapi = "^0.111.0"
+strawberry-graphql = "^0.227.3"
 httpx = "^0.27.0"
-pydantic = "^2.7.0"
-sqlmodel = "^0.0.16"
+pydantic = "^2.7.1"
 alembic = "^1.13.1"
 asyncmy = "^0.2.9"
 pydantic-settings = "^2.2.1"
+sqlmodel-slim = {extras = ["standard"], version = "^0.0.18"}
+sqlmodel = "^0.0.18"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
-ruff = "^0.3.7"
-mypy = "^1.9.0"
+ruff = "^0.4.3"
+mypy = "^1.10.0"
+commitizen = "^3.25.0"
 poetry-plugin-export = "^1.7.1"
-commitizen = "^3.22.0"
 
 [tool.poetry.group.docs.dependencies]
-mkdocs = "^1.5.3"
-mkdocs-material = "^9.5.18"
-mkdocstrings = "^0.24.3"
+mkdocs = "^1.6.0"
+mkdocs-material = "^9.5.21"
+mkdocstrings = "^0.25.1"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^8.1.1"
+pytest = "^8.2.0"
 pytest-cov = "^5.0.0"
 pytest-mock = "^3.14.0"
+pytest-asyncio = "^0.23.6"
+respx = "^0.21.1"
 
 [build-system]
 requires = ["poetry-core"]
