--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,52 @@
+[tool.poetry]
+name = "jacobson"
+version = "0.1.0"
+description = "self-hosted zipcode API"
+authors = ["Christian G. Semke <chrisemke@protonmail.com>"]
+license = "AGPLv3"
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.12"
+uvicorn = {extras = ["standard"], version = "^0.30.0"}
+fastapi-slim = "^0.111.0"
+strawberry-graphql = "^0.232.1"
+httpx = "^0.27.0"
+pydantic = "^2.7.1"
+alembic = "^1.13.1"
+asyncmy = "^0.2.9"
+pydantic-settings = "^2.2.1"
+sqlmodel-slim = {extras = ["standard"], version = "^0.0.18"}
+sqlmodel = "^0.0.18"
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.7.1"
+ruff = "^0.4.5"
+mypy = "^1.10.0"
+commitizen = "^3.27.0"
+poetry-plugin-export = "^1.8.0"
+fastapi = "^0.111.0"
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.6.0"
+mkdocs-material = "^9.5.25"
+mkdocstrings = "^0.25.1"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.2.1"
+pytest-cov = "^5.0.0"
+pytest-mock = "^3.14.0"
+pytest-asyncio = "^0.23.7"
+respx = "^0.21.1"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.mypy]
 python_version = "3.12"
 strict = true
+explicit_package_bases = true
 exclude = ["build", "docker", "tests"]
 plugins = ["pydantic.mypy", "strawberry.ext.mypy_plugin"]
 
@@ -17,10 +63,7 @@ lint.select = [
 lint.ignore = [
     "D100", # Missing docstring in public module
     "D101", # Missing docstring in public class
-    "D102", # Missing docstring in public method
-    "D103", # Missing docstring in public function
     "D104", # Missing docstring in public package
-    "D107", # Missing docstring in `__init__`
     "D105", # Missing docstring in magic method
     "D203", # 1 blank line required before class docstring
     "D205", # 1 blank line required between summary line and description
@@ -35,49 +78,5 @@ quote-style = "single"
 
 [tool.pytest.ini_options]
 minversion = "8.2"
-addopts = "-vv --no-header"
+addopts = "-vv --no-header --ignore=docker"
 testpaths = ["tests"]
-
-[tool.poetry]
-name = "jacobson"
-version = "0.1.0"
-description = "self-hosted zipcode API"
-authors = ["Christian G. Semke <chrisemke@protonmail.com>"]
-license = "AGPLv3"
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.12"
-uvicorn = {extras = ["standard"], version = "^0.29.0"}
-fastapi = "^0.111.0"
-strawberry-graphql = "^0.227.3"
-httpx = "^0.27.0"
-pydantic = "^2.7.1"
-alembic = "^1.13.1"
-asyncmy = "^0.2.9"
-pydantic-settings = "^2.2.1"
-sqlmodel-slim = {extras = ["standard"], version = "^0.0.18"}
-sqlmodel = "^0.0.18"
-
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^3.7.0"
-ruff = "^0.4.3"
-mypy = "^1.10.0"
-commitizen = "^3.25.0"
-poetry-plugin-export = "^1.7.1"
-
-[tool.poetry.group.docs.dependencies]
-mkdocs = "^1.6.0"
-mkdocs-material = "^9.5.21"
-mkdocstrings = "^0.25.1"
-
-[tool.poetry.group.test.dependencies]
-pytest = "^8.2.0"
-pytest-cov = "^5.0.0"
-pytest-mock = "^3.14.0"
-pytest-asyncio = "^0.23.6"
-respx = "^0.21.1"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
