--- a/sample.env
+++ b/sample.env
@@ -4,4 +4,4 @@ DATABASE_HOST = "jacobson_db_1"
 DATABASE_PORT = 3306
 DATABASE_NAME = "test"
 
-CEP_ABERTO_TOKEN = 'token'
+# CEP_ABERTO_TOKEN = 'token'
