--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,7 +45,7 @@ repos:
             --no-space,
           ]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.5.5
+    rev: v0.6.3
     hooks:
       - id: ruff-format
         name: Run Ruff Formater
@@ -56,7 +56,7 @@ repos:
           )
       - id: ruff
         name: Run Ruff Linter
-        args: [--fix, --exit-non-zero-on-fix]
+        args: [--fix, --unsafe-fixes, --exit-non-zero-on-fix]
         exclude: |
           (?x)^(
               ^build/|
@@ -64,7 +64,7 @@ repos:
               ^tests/
           )
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.11.0
+    rev: v1.11.2
     hooks:
       - id: mypy
         name: Run Mypy (Static type checker)
@@ -80,6 +80,8 @@ repos:
             pydantic,
             pydantic-settings,
             sqlmodel,
+            pyjwt,
+            "pwdlib[argon2]",
           ]
   - repo: https://github.com/python-poetry/poetry
     rev: "1.8.0"
@@ -91,7 +93,7 @@ repos:
       - id: poetry-export
         args: [-o, requirements_dev.txt, --with=docs]
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: v3.28.0
+    rev: v3.29.0
     hooks:
       - id: commitizen
       - id: commitizen-branch
