--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,47 +1,50 @@
 [tool.poetry]
 name = "jacobson"
-version = "0.1.0"
+version = "0.3.0"
 description = "self-hosted zipcode API"
 authors = ["Christian G. Semke <chrisemke@protonmail.com>"]
-license = "AGPLv3"
+license = "AGPL-3.0-or-later"
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "3.12.*"
-uvicorn = {extras = ["standard"], version = "^0.30.4"}
-fastapi-slim = "^0.111.1"
-strawberry-graphql = {extras = ["fastapi"], version = "^0.237.3"}
-httpx = "^0.27.0"
+uvicorn = {extras = ["standard"], version = "^0.30.6"}
+fastapi-slim = "^0.112.2"
+strawberry-graphql = {extras = ["fastapi"], version = "^0.239.1"}
+httpx = "^0.27.2"
 pydantic = "^2.8.2"
 alembic = "^1.13.2"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
 pydantic-settings = "^2.4.0"
-sqlmodel = "^0.0.21"
+sqlmodel = "^0.0.22"
+email-validator = "^2.2.0"
+pyjwt = "^2.9.0"
+pwdlib = {extras = ["argon2"], version = "^0.2.1"}
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.8.0"
-ruff = "^0.5.5"
-mypy = "^1.11.1"
-commitizen = "^3.28.0"
+ruff = "^0.6.3"
+mypy = "^1.11.2"
+commitizen = "^3.29.0"
 poetry-plugin-export = "^1.8.0"
-fastapi = "^0.111.1"
-strawberry-graphql = {extras = ["cli"], version = "^0.237.3"}
+fastapi = {extras = ["standard"], version = "^0.112.2"}
+strawberry-graphql = {extras = ["cli"], version = "^0.239.1"}
 taskipy = "^1.13.0"
 
 [tool.poetry.group.docs.dependencies]
-mkdocs = "^1.6.0"
-mkdocs-material = "^9.5.30"
-mkdocstrings = {extras = ["python"], version = "^0.25.2"}
+mkdocs = "^1.6.1"
+mkdocs-material = "^9.5.34"
+mkdocstrings = {extras = ["python"], version = "^0.26.0"}
 mkdocs-site-urls = "^0.2.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.2"
 pytest-cov = "^5.0.0"
 pytest-mock = "^3.14.0"
-pytest-asyncio = "^0.23.8"
+pytest-asyncio = "^0.24.0"
 respx = "^0.21.1"
-testcontainers = {extras = ["postgres"], version = "^4.7.2"}
-factory-boy = "^3.3.0"
+testcontainers = {extras = ["postgres"], version = "^4.8.0"}
+factory-boy = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -55,7 +58,12 @@ exclude = ["build", "docker", "tests"]
 plugins = ["pydantic.mypy", "strawberry.ext.mypy_plugin"]
 
 [tool.ruff]
-lint.select = [
+indent-width = 1
+line-length = 79
+target-version = "py312"
+
+[tool.ruff.lint]
+select = [
 	"E",     # pydocstyle
 	"W",     # pydocstyle
 	"F",     # pyflakes
@@ -67,7 +75,7 @@ lint.select = [
 	"ASYNC", # flake8-async
 	"PT",    # flake8-pytest-style
 ]
-lint.ignore = [
+ignore = [
 	"D100", # Missing docstring in public module
 	"D101", # Missing docstring in public class
 	"D104", # Missing docstring in public package
@@ -80,9 +88,12 @@ lint.ignore = [
 	"D407", # Missing dashed underline after section
 	"W191", # Indentation contains tabs
 ]
-indent-width = 1
-line-length = 79
-target-version = "py312"
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["D103"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [tool.ruff.format]
 indent-style = "tab"
@@ -102,14 +113,15 @@ container = "podman"
 build = {cmd = "{container} compose up -d --build", help = "Build containers", use_vars = true}
 up = {cmd = "{container} compose up -d", help = "Run containers", use_vars = true}
 down = {cmd = "{container} compose down", help = "Turn off containers", use_vars = true}
-logs = {cmd = "{container} logs -f -t --color jacobson_app_1", use_vars = true}
+logs = {cmd = "{container} logs -f -t --color jacobson_app_1", help = "Show api container logs", use_vars = true}
+restart = {cmd = "task down; task up", help = "Restart running containers"}
 
 docs_serve = {cmd = "mkdocs serve -w . -a localhost:8008", help = "Serve mkdocs watch all files"}
 pre_docs_deploy = {cmd = "mkdocs build", help = "Build mkdocs"}
 docs_deploy = {cmd = "mkdocs gh-deploy -b pages", help = "Deploy mkdocs on branch pages"}
 
 hooks = {cmd = "pre-commit run --all-files", help = "Run htoolooks on all files"}
-hooks_upgrade = {cmd = "pre-commit autoupdate", help = "Auto update git hooks"}
+autoupdate_hooks = {cmd = "pre-commit autoupdate", help = "Auto update git hooks"}
 
 post_test = {cmd = "coverage html", help = "Generate coverage html"}
 [tool.taskipy.tasks.test]
