docs(sample.env): add important fields that are needed for auth

--- a/sample.env
+++ b/sample.env
@@ -3,10 +3,16 @@
 DEV = 1
 
 # Database is PostgreSQL
-DATABASE_USER = "teste"
-DATABASE_PASSWORD = "teste"
+DATABASE_USER = "test"
+DATABASE_PASSWORD = "test"
 DATABASE_HOST = "jacobson_db_1"
 DATABASE_PORT = 5432
 DATABASE_NAME = "test"
+
+JWT_SECRET_KEY = "your-secret-key"
+JWT_ALGORITHM = "HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
+
+TIME_ZONE = "UTC"
 
 # CEP_ABERTO_TOKEN = 'token'
