--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "3.12.*"
 uvicorn = {extras = ["standard"], version = "^0.30.6"}
 fastapi-slim = "^0.112.2"
-strawberry-graphql = {extras = ["fastapi"], version = "^0.239.1"}
+strawberry-graphql = {extras = ["fastapi"], version = "^0.239.2"}
 httpx = "^0.27.2"
 pydantic = "^2.8.2"
 alembic = "^1.13.2"
@@ -28,7 +28,7 @@ mypy = "^1.11.2"
 commitizen = "^3.29.0"
 poetry-plugin-export = "^1.8.0"
 fastapi = {extras = ["standard"], version = "^0.112.2"}
-strawberry-graphql = {extras = ["cli"], version = "^0.239.1"}
+strawberry-graphql = {extras = ["cli"], version = "^0.239.2"}
 taskipy = "^1.13.0"
 
 [tool.poetry.group.docs.dependencies]
@@ -43,7 +43,7 @@ pytest-cov = "^5.0.0"
 pytest-mock = "^3.14.0"
 pytest-asyncio = "^0.24.0"
 respx = "^0.21.1"
-testcontainers = {extras = ["postgres"], version = "^4.8.0"}
+testcontainers = {extras = ["postgres"], version = "^4.8.1"}
 factory-boy = "^3.3.1"
 
 [build-system]
@@ -90,7 +90,7 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["D103"]
+"tests/*" = ["D102", "D103", "D106"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
