--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "3.12.*"
 uvicorn = {extras = ["standard"], version = "^0.30.6"}
-fastapi-slim = "^0.112.2"
+fastapi-slim = "^0.114.0"
 strawberry-graphql = {extras = ["fastapi"], version = "^0.239.2"}
-httpx = "^0.27.2"
-pydantic = "^2.8.2"
+httpx = {extras = ["http2"], version = "^0.27.2"}
+pydantic = "^2.9.0"
 alembic = "^1.13.2"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
 pydantic-settings = "^2.4.0"
@@ -23,18 +23,18 @@ pwdlib = {extras = ["argon2"], version = "^0.2.1"}
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.8.0"
-ruff = "^0.6.3"
+ruff = "^0.6.4"
 mypy = "^1.11.2"
 commitizen = "^3.29.0"
 poetry-plugin-export = "^1.8.0"
-fastapi = {extras = ["standard"], version = "^0.112.2"}
+fastapi = {extras = ["standard"], version = "^0.114.0"}
 strawberry-graphql = {extras = ["cli"], version = "^0.239.2"}
 taskipy = "^1.13.0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.6.1"
 mkdocs-material = "^9.5.34"
-mkdocstrings = {extras = ["python"], version = "^0.26.0"}
+mkdocstrings = {extras = ["python"], version = "^0.26.1"}
 mkdocs-site-urls = "^0.2.0"
 
 [tool.poetry.group.test.dependencies]
