refactor(structure): move every code module to jacobson folder and fix containers
It will be easier to manage container volumes on dev and prod, especially when adding new modules

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,7 +52,7 @@ repos:
         exclude: |
           (?x)(
               ^build/|
-              ^docker/
+              ^containers/
           )
       - id: ruff
         name: Run Ruff Linter
@@ -60,7 +60,7 @@ repos:
         exclude: |
           (?x)^(
               ^build/|
-              ^docker/|
+              ^containers/|
               ^tests/
           )
   - repo: https://github.com/pre-commit/mirrors-mypy
@@ -71,7 +71,7 @@ repos:
         exclude: |
           (?x)(
               ^build/|
-              ^docker/|
+              ^containers/|
               ^tests/
           )
         additional_dependencies:
