--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,7 +45,7 @@ repos:
             --no-space,
           ]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.6
+    rev: v0.6.7
     hooks:
       - id: ruff-format
         name: Run Ruff Formater
@@ -83,15 +83,10 @@ repos:
             pyjwt,
             "pwdlib[argon2]",
           ]
-  - repo: https://github.com/python-poetry/poetry
-    rev: "1.8.0"
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: "0.4.15"
     hooks:
-      - id: poetry-check
-      - id: poetry-lock
-      - id: poetry-export
-        args: [-o, requirements.txt]
-      - id: poetry-export
-        args: [-o, requirements_dev.txt, --with=docs]
+      - id: uv-lock
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v3.29.0
     hooks:
