--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,54 +1,73 @@
-[tool.poetry]
-name = "jacobson"
+[project]
+name = "Jacobson"
 version = "0.3.0"
-description = "self-hosted zipcode API"
-authors = ["Christian G. Semke <chrisemke@protonmail.com>"]
-license = "AGPL-3.0-or-later"
+description = 'Self-hosted zipcode API'
 readme = "README.md"
+requires-python = "~=3.12"
+license = {text = "AGPL-3.0-or-later"}
+keywords = []
+authors = [{name = "Krisque", email = "chrisemke@protonmail.com"}]
+classifiers = [
+	"License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
+	"Development Status :: 4 - Beta",
+	"Programming Language :: Python",
+	"Programming Language :: Python :: 3.12",
+	"Programming Language :: Python :: Implementation :: CPython",
+	"Framework :: FastAPI",
+	"Framework :: Pydantic",
+	"Framework :: Pydantic :: 2",
+	"Framework :: Pytest",
+	"Framework :: MkDocs",
+]
+dependencies = [
+	"alembic~=1.13.2",
+	"email-validator~=2.2.0",
+	"fastapi-slim~=0.115.0",
+	"httpx[http2]~=0.27.2",
+	"psycopg[binary]~=3.2.2",
+	"pwdlib[argon2]~=0.2.1",
+	"pydantic~=2.9.2",
+	"pydantic-settings~=2.5.2",
+	"pyjwt~=2.9.0",
+	"sqlmodel~=0.0.22",
+	"strawberry-graphql[fastapi]~=0.242.0",
+	"uvicorn[standard]~=0.30.6",
+]
 
-[tool.poetry.dependencies]
-python = "3.12.*"
-uvicorn = {extras = ["standard"], version = "^0.30.6"}
-fastapi-slim = "^0.115.0"
-strawberry-graphql = {extras = ["fastapi"], version = "^0.242.0"}
-httpx = {extras = ["http2"], version = "^0.27.2"}
-pydantic = "^2.9.2"
-alembic = "^1.13.2"
-psycopg = {extras = ["binary"], version = "^3.2.2"}
-pydantic-settings = "^2.5.2"
-sqlmodel = "^0.0.22"
-email-validator = "^2.2.0"
-pyjwt = "^2.9.0"
-pwdlib = {extras = ["argon2"], version = "^0.2.1"}
+[project.urls]
+Documentation = "https://krisque.codeberg.page/jacobson/"
+Issues = "https://codeberg.org/Krisque/jacobson/issues"
+Source = "https://codeberg.org/Krisque/jacobson"
 
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^3.8.0"
-ruff = "^0.6.6"
-mypy = "^1.11.2"
-commitizen = "^3.29.0"
-poetry-plugin-export = "^1.8.0"
-fastapi = {extras = ["standard"], version = "^0.115.0"}
-strawberry-graphql = {extras = ["cli"], version = "^0.242.0"}
-taskipy = "^1.13.0"
+[project.optional-dependencies]
+docs = [
+	"mkdocs-material~=9.5.36",
+	"mkdocs-site-urls~=0.2.0",
+	"mkdocs~=1.6.1",
+	"mkdocstrings[python]~=0.26.1",
+]
+test = [
+	"factory-boy~=3.3.1",
+	"pytest~=8.3.3",
+	"pytest-asyncio~=0.24.0",
+	"pytest-cov~=5.0.0",
+	"pytest-mock~=3.14.0",
+	"respx~=0.21.1",
+	"testcontainers[postgres]~=4.8.1",
+]
 
-[tool.poetry.group.docs.dependencies]
-mkdocs = "^1.6.1"
-mkdocs-material = "^9.5.35"
-mkdocstrings = {extras = ["python"], version = "^0.26.1"}
-mkdocs-site-urls = "^0.2.0"
 
-[tool.poetry.group.test.dependencies]
-pytest = "^8.3.3"
-pytest-cov = "^5.0.0"
-pytest-mock = "^3.14.0"
-pytest-asyncio = "^0.24.0"
-respx = "^0.21.1"
-testcontainers = {extras = ["postgres"], version = "^4.8.1"}
-factory-boy = "^3.3.1"
+[tool.uv]
+dev-dependencies = [
+	"commitizen~=3.29.0",
+	"fastapi[standard]~=0.115.0",
+	"mypy~=1.11.2",
+	"pre-commit~=3.8.0",
+	"ruff~=0.6.7",
+	"strawberry-graphql[cli]~=0.242.0",
+	"taskipy~=1.13.0",
+]
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
 
 [tool.mypy]
 python_version = "3.12"
@@ -65,16 +84,16 @@ fix = true
 
 [tool.ruff.lint]
 select = [
-	"E",     # pydocstyle
-	"W",     # pydocstyle
-	"F",     # pyflakes
-	"I",     # isort
-	"PL",    # Pylint
-	"UP",    # pyupgrade
-	"D",     # docstrings
-	"RUF",   # ruff
+	"E", # pydocstyle
+	"W", # pydocstyle
+	"F", # pyflakes
+	"I", # isort
+	"PL", # Pylint
+	"UP", # pyupgrade
+	"D", # docstrings
+	"RUF", # ruff
 	"ASYNC", # flake8-async
-	"PT",    # flake8-pytest-style
+	"PT", # flake8-pytest-style
 ]
 ignore = [
 	"D100", # Missing docstring in public module
