--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -87,6 +87,10 @@ repos:
     rev: "0.4.15"
     hooks:
       - id: uv-lock
+      - id: uv-export
+        args: ["--no-dev", "-o=requirements.txt"]
+      - id: uv-export
+        args: ["--extra=docs", "--no-dev", "-o=requirements_dev.txt"]
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v3.29.0
     hooks:
