--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: end-of-file-fixer
       - id: trailing-whitespace
@@ -45,7 +45,7 @@ repos:
             --no-space,
           ]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.8
+    rev: v0.6.9
     hooks:
       - id: ruff-format
         name: Ruff Formater
@@ -96,4 +96,4 @@ repos:
       - id: commitizen-branch
         stages:
           - post-commit
-          - push
+          - pre-push
