--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "Jacobson"
 version = "0.3.0"
 description = 'Self-hosted zipcode API'
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12, <3.14"
 license = {text = "AGPL-3.0-or-later"}
 keywords = []
 authors = [{name = "Krisque", email = "chrisemke@protonmail.com"}]
@@ -18,12 +18,13 @@ classifiers = [
 	"License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
 	"Programming Language :: Python",
 	"Programming Language :: Python :: 3.12",
+	"Programming Language :: Python :: 3.13",
 	"Programming Language :: Python :: Implementation :: CPython",
 ]
 dependencies = [
 	"alembic>=1.13.3",
 	"email-validator>=2.2.0",
-	"fastapi-slim>=0.115.0",
+	"fastapi-slim>=0.115.2",
 	"httpx[http2]>=0.27.2",
 	"psycopg[binary]>=3.2.3",
 	"pwdlib[argon2]>=0.2.1",
@@ -31,16 +32,17 @@ dependencies = [
 	"pydantic-settings>=2.5.2",
 	"pyjwt>=2.9.0",
 	"sqlmodel>=0.0.22",
-	"strawberry-graphql[fastapi]>=0.245.0",
-	"uvicorn[standard]>=0.31.0",
+	"strawberry-graphql[fastapi]>=0.246.2",
+	"uvicorn[standard]>=0.32.0",
+	"greenlet>=3.1.1", # Needed to run alembic for now
 ]
 
 [project.optional-dependencies]
 docs = [
-	"mkdocs-material>=9.5.39",
+	"mkdocs-material>=9.5.41",
 	"mkdocs-site-urls>=0.2.0",
 	"mkdocs>=1.6.1",
-	"mkdocstrings[python]>=0.26.1",
+	"mkdocstrings[python]>=0.26.2",
 ]
 test = [
 	"factory-boy>=3.3.1",
@@ -49,7 +51,7 @@ test = [
 	"pytest-cov>=5.0.0",
 	"pytest-mock>=3.14.0",
 	"respx>=0.21.1",
-	"testcontainers[postgres]>=4.8.1",
+	"testcontainers[postgres]>=4.8.2",
 ]
 
 [project.urls]
@@ -61,24 +63,24 @@ Source = "https://codeberg.org/Krisque/jacobson"
 [tool.uv]
 dev-dependencies = [
 	"commitizen>=3.29.1",
-	"fastapi[standard]>=0.115.0",
-	"mypy>=1.11.2",
-	"pre-commit>=4.0.0",
+	"fastapi[standard]>=0.115.2",
+	"mypy>=1.12.0",
+	"pre-commit>=4.0.1",
 	"ruff>=0.6.9",
-	"strawberry-graphql[cli]>=0.245.0",
+	"strawberry-graphql[cli]>=0.246.2",
 	"taskipy>=1.13.0",
 ]
 
 
 [tool.mypy]
-python_version = "3.12"
+python_version = "3.13"
 strict = true
 explicit_package_bases = true
 exclude = ["build", "containers", "tests"]
 plugins = ["pydantic.mypy", "strawberry.ext.mypy_plugin"]
 
 [tool.ruff]
-target-version = "py312"
+target-version = "py313"
 indent-width = 1
 line-length = 79
 fix = true
@@ -122,7 +124,7 @@ quote-style = "single"
 docstring-code-format = true
 
 [tool.pytest.ini_options]
-minversion = "8.2"
+minversion = "8.3"
 addopts = "-vv --no-header -p no:warnings"
 asyncio_mode = 'auto'
 testpaths = ["tests"]
